[NEW/UPDATE] helpers.js in index.html + profile.html eingebaut + app.js funktionen in helper ausgelagert (slider) + misc css fixes + mixins update + bla bla + no one reads this crap

--- a/client/src/scss/app.scss
+++ b/client/src/scss/app.scss
@@ -6,18 +6,21 @@
 
 @import "base/normalize";
 @import "base/grid";
+@import "base/icons";
 
 @import "base/main";
 @import "base/typography";
 @import "base/lists";
 @import "base/tabs";
 
+@import "base/slider";
 
 @import "base/header";
 @import "base/footer";
 
 @import "components/logo";
 @import "components/forms";
+@import "components/profile-page";
 
 @import "page/login";
 @import "page/errors";
