--- a/client/src/scss/base/_mixins.scss
+++ b/client/src/scss/base/_mixins.scss
@@ -15,9 +15,11 @@
 }
 
 @mixin clearfix() {
-    &:after {
-        content: "";
+    &:before, &:after {
+        content: " ";
         display: table;
+    }
+    &:after {
         clear: both;
     }
 }
