--- a/client/src/scss/base/_variables.scss
+++ b/client/src/scss/base/_variables.scss
@@ -4,13 +4,14 @@ $bg-sec: #34495E;
 
 $text-light: $bg-sec;
 $text-dark: #333;
+$text-muted: #a9a9a9;
 
 $error: #E74C3C;
 
 $border-light: #efefef;
 
 /* GRID */
-$grid-padding: 2rem;
+$grid-padding: 1.5rem;
 $grid-gutter: 2rem;
 
 /* PADDINGS */
