--- a/client/src/scss/base/_main.scss
+++ b/client/src/scss/base/_main.scss
@@ -14,9 +14,9 @@ body {
     padding: 0;
     height: 100%;
 
-//    background-image: linear-gradient(to bottom,#0ff 0,rgba(255,255,255,0)1px);
-//    background-repeat: repeat-y;
-//    background-size: 100% 1.625rem;
+    background-image: linear-gradient(to bottom,#0ff 0,rgba(255,255,255,0)1px);
+    background-repeat: repeat-y;
+    background-size: 100% 1.625rem;
 }
 
 
@@ -26,6 +26,7 @@ body {
     height:100%;
     margin-bottom:-92px; // the height of our footer + margin
     padding-top: 52px;
+    overflow: hidden;
 }
 
 .main-content {
