--- a/client/views/bands/track_item.html
+++ b/client/views/bands/track_item.html
@@ -1,5 +1,7 @@
-<li>
-    {{track.trackname}}
-    <a href="{{ url_for('bands.tracks.delete', track_id=track.id) }}">[x]</a>
-    <audio src="{{track.url}}" controls></audio>
-</li>
+{% for track in g.band.tracks %}
+    <li>
+        {{track.trackname}}
+        <a href="{{ url_for('bands.tracks.delete', track_id=track.id) }}">[x]</a>
+        <audio src="{{track.url}}" controls></audio>
+    </li>
+{% endfor %}
