Make the upload method more general again, move the multi-file upload specific things to the tracks.js Add a list of the selected tracks to the tracks upload with a (by now) very simple status & a dumb spinner (white background ftw.) Check the amount of allowed tracks after every saved track TODO: how to handle a case where some files where successfully uploaded and some not (too much file, wrong format etc.)

--- a/client/views/bands/tracks.html
+++ b/client/views/bands/tracks.html
@@ -16,7 +16,10 @@
 <form method="POST" action="{{ url_for('bands.tracks.upload') }}" enctype="multipart/form-data" id="track_form">
     {{ track_form.csrf_token }}
 
-      <input type="file" id="audioFile" name="audioFile[]" multiple="">
+    <input type="file" id="audioFile" name="audioFile[]" multiple="">
+    <ul id="selected-tracks">
+
+    </ul>
 
     <input type="submit" value="Song hochladen">
 </form>
