[NEW/UPDATE] begin implement html dummys to profile page + seperate header in file + add slick.js to layout.html + set debug output in helpers.js + comment in imgmin task in Gruntfile

--- a/client/src/scss/components/_profile-page.scss
+++ b/client/src/scss/components/_profile-page.scss
@@ -6,9 +6,17 @@
     }
 
     .form-action {
-//        width: 95%;
+
         margin: 0 0.3125rem;
         min-height: 500px;
         background-color: rgba($border-light,0.8);
+
+        opacity: 0.9;
+
+        transition: opacity 0.4s ease;
+
+        &.slick-center {
+            opacity: 1;
+        }
     }
 }
