--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -52,30 +52,7 @@
 </head>
 <body>
 
-<header>
-    <div class="logo">
-        <!--<img src="img/tunefish.svg" alt="Tunefish" class="anim-logo"/>-->
-        <span>tunefish</span>
-    </div>
-    {% if g.band %}
-    <div class="logo">
-        <!--<img src="img/tunefish.svg" alt="Tunefish" class="anim-logo"/>-->
-        <span>Band "{{ g.band.name }}"</span>
-    </div>
-
-    <div class="logo">
-            <span>
-                Eingeloggt als "{{ g.band.login }}"
-            </span>
-    </div>
-
-    <div class="logo">
-            <span>
-                <a href="{{ url_for('bands.session.logout') }}">Logout</a>
-            </span>
-    </div>
-    {% endif %}
-</header>
+{% include "header.html" %}
 
 <main class="grid main">
 
@@ -89,6 +66,7 @@
 </footer>
 
 <script src="{{ url_for('static', filename='js/vendor/jquery.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/vendor/slick.min.js') }}"></script>
 <script src="{{ url_for('static', filename='js/lib/helpers.js') }}"></script>
 <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 
