[UPDATE] Further heavy adjustments to profile page

--- a/client/src/scss/app.scss
+++ b/client/src/scss/app.scss
@@ -4,6 +4,8 @@
 @import "base/mixins";
 @import "base/global-classes";
 
+//@import "base/debug";
+
 @import "base/normalize";
 @import "base/grid";
 @import "base/icons";
@@ -21,6 +23,9 @@
 @import "components/logo";
 @import "components/forms";
 @import "components/profile-page";
+@import "components/audioplayer";
+@import "components/spinner";
 
 @import "page/login";
 @import "page/errors";
+
