--- a/client/src/scss/base/_grid.scss
+++ b/client/src/scss/base/_grid.scss
@@ -9,9 +9,9 @@
  * }
 */
 
-.grid {
-    padding-right: $grid-padding;
+.login {
     padding-left:  $grid-padding;
+    padding-right: $grid-padding;
 }
 .row {
     box-sizing: border-box;
