--- a/client/src/scss/base/_main.scss
+++ b/client/src/scss/base/_main.scss
@@ -14,9 +14,7 @@ body {
     padding: 0;
     height: 100%;
 
-    background-image: linear-gradient(to bottom,#0ff 0,rgba(255,255,255,0)1px);
-    background-repeat: repeat-y;
-    background-size: 100% 1.625rem;
+//    background-color: $bg-sec;
 }
 
 
