--- a/client/views/bands/image.html
+++ b/client/views/bands/image.html
@@ -4,7 +4,7 @@
 {% from "_formhelpers.html" import renderMessages %}
 
 
-<h2>Tab 3: Image</h2>
+<h2>Bild</h2>
 
 <h3>Aktuelles Bild</h3>
 <div id="image">
@@ -16,5 +16,11 @@
 <form method="POST" action="{{ url_for('bands.image.upload') }}" enctype="multipart/form-data" id="image_form">
     {{ image_form.csrf_token }}
     {{ renderDefault(image_form.image_file) }}
-    <input type="submit" value="Bild aktualisieren">
+
+    <div class="field-group fg-upload">
+        <div class="input-prefix"><i class="i-upload"></i> Datei auswählen...</div>
+        <input type="file" id="image_file" name="image_file">
+    </div>
+
+    <input type="submit" value="Bild senden">
 </form>
