--- a/client/views/bands/main.html
+++ b/client/views/bands/main.html
@@ -41,7 +41,7 @@
             </div>
         </div>
     </div>
-    <div class="footer-push"></div>
+    <!--<div class="footer-push"></div>-->
 </section>
 
 {% endblock %}
