--- a/client/views/bands/track_item.html
+++ b/client/views/bands/track_item.html
@@ -1,7 +1,9 @@
 {% for track in g.band.tracks %}
     <li>
-        {{track.trackname}}
-        <a href="{{ url_for('bands.tracks.delete', track_id=track.id) }}">[x]</a>
-        <audio src="{{track.url}}" controls></audio>
+        <div class="audio-track">
+            <audio src="{{track.url}}" controls></audio>
+            <a href="{{ url_for('bands.tracks.delete', track_id=track.id) }}"><i class="i-close"></i></a>
+        </div>
+        <span class="audio-track--name">{{track.trackname}}</span>
     </li>
 {% endfor %}
