At least in firefox an uri without http is not valid

--- a/client/views/bands/profile.html
+++ b/client/views/bands/profile.html
@@ -39,7 +39,7 @@
                 {{ band_form.website.label }}
                 <div class="field-group">
                     <div class="input-prefix"><i class="i-link"></i></div>
-                    {{ getField(band_form.website, "vorstrasse-bremen.de") }}{{ getErrors(band_form.website) }}
+                    {{ getField(band_form.website, "http://vorstrasse-bremen.de") }}{{ getErrors(band_form.website) }}
                 </div>
             </div>
 
