--- a/client/views/layout.html
+++ b/client/views/layout.html
@@ -65,8 +65,8 @@
     &copy;2014 - Wohnpark am Fleet e.V.
 </footer>
 
-<script src="{{ url_for('static', filename='js/vendor/jquery.min.js') }}"></script>
-<script src="{{ url_for('static', filename='js/vendor/slick.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/jquery.min.js') }}"></script>
+<script src="{{ url_for('static', filename='js/plugins.js') }}"></script>
 <script src="{{ url_for('static', filename='js/lib/helpers.js') }}"></script>
 <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 
