--- a/client/src/scss/base/_header.scss
+++ b/client/src/scss/base/_header.scss
@@ -11,6 +11,7 @@ header {
     top: 0;
     left: 0;
     width: 100%;
+    z-index: 1000;
 //
 //    box-shadow: 0 0 5px 5px rgba($shadow-dark, 0.5);
 
