--- a/client/views/bands/techrider_link.html
+++ b/client/views/bands/techrider_link.html
@@ -1,3 +1,3 @@
 {% if g.band.techrider %}
-<a href="{{g.band.techrider_url }}">Techrider Download</a>
+<li><a href="{{g.band.techrider_url }}">Techrider Download</a></li>
 {% endif %}
