--- a/client/views/bands/image.html
+++ b/client/views/bands/image.html
@@ -16,5 +16,7 @@
         <input type="file" id="image_file" name="image_file">
     </div>
 
+    <ul class="uploads--list"></ul>
+
     <input type="submit" value="Bild senden">
 </form>
