--- a/client/src/scss/base/_footer.scss
+++ b/client/src/scss/base/_footer.scss
@@ -13,4 +13,8 @@ footer {
     border-top: 1px solid $border-light;
     margin-top:$space;
     height:62px;
+
+    @include breakpoint(m) {
+        margin-top:0;
+    }
 }
