--- a/client/src/scss/components/_audioplayer.scss
+++ b/client/src/scss/components/_audioplayer.scss
@@ -1,12 +1,17 @@
 .track-list-item {
     overflow: hidden;
+
+    &:last-child {
+        .audio-track--name {
+            margin-bottom: 0;
+        }
+    }
 }
 
 .audio-track {
     position: relative;
     overflow: hidden;
-    background-color: $bg-ter;
-
+    background-color: #000;
 
     a {
         display: block;
@@ -39,39 +44,4 @@
     border-top: 1px solid $text-light;
     text-align: center;
     margin-bottom: $space;
-}
-
-
-.audio-track--uploads {
-    margin: 0;
-    margin-bottom: $space;
-
-    li,
-    i {
-        line-height: 39px;
-    }
-
-    li {
-        position: relative;
-        background-color: $text-light;
-        padding-left: 49px;
-        border-bottom: 1px solid $border-light;
-    }
-
-    span {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 39px;
-        text-align: center;
-        border-right: 1px solid $border-light;
-    }
-
-    .i-done {
-        color: $success;
-    }
-
-    .i-close {
-        color: $error;
-    }
 }
