--- a/client/views/bands/tracks.html
+++ b/client/views/bands/tracks.html
@@ -11,7 +11,11 @@
         {% include "track_item.html" %}
     </ul>
 </div>
+<div class="missing-files animated"></div>
 {% else %}
+<div class="uploaded-files animated">
+    <ul id="track_list" class="track-list"></ul>
+</div>
 <div class="missing-files">
     <i class="i-audio"></i>
     <h3>Noch keine Musik hochgeladen</h3>
@@ -28,7 +32,7 @@
         <input type="file" id="audioFile" name="audioFile[]" multiple>
     </div>
 
-    <ul id="selected-tracks" class="audio-track--uploads"></ul>
+    <ul class="uploads--list"></ul>
 
     <input type="submit" value="Musikupload senden">
 </form>
