--- a/client/src/scss/page/_login.scss
+++ b/client/src/scss/page/_login.scss
@@ -2,6 +2,14 @@
     max-width: 1200px;
     margin-top: $base-line-height;
 
+    @include breakpoint(m) {
+        position: absolute;
+        width: 100%;
+        top: 50%;
+        transform: translateY(-50%);
+        margin-top: 0;
+    }
+
     h1 {
         @extend h2;
         margin-top: $space;
